--- a/Code/Exploratory Data Analysis/Finalized EDA/Finalized Class Statistics.ipynb
+++ b/Code/Exploratory Data Analysis/Finalized EDA/Finalized Class Statistics.ipynb
@@ -299,104 +299,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_1a795 th {\n",
+       "#T_ba617 th {\n",
        "  text-align: center;\n",
        "}\n",
-       "#T_1a795_row0_col0, #T_1a795_row0_col1, #T_1a795_row0_col2, #T_1a795_row0_col3, #T_1a795_row1_col0, #T_1a795_row1_col1, #T_1a795_row1_col2, #T_1a795_row1_col3, #T_1a795_row2_col0, #T_1a795_row2_col1, #T_1a795_row2_col2, #T_1a795_row2_col3, #T_1a795_row3_col0, #T_1a795_row3_col1, #T_1a795_row3_col2, #T_1a795_row3_col3, #T_1a795_row4_col0, #T_1a795_row4_col1, #T_1a795_row4_col2, #T_1a795_row4_col3, #T_1a795_row5_col0, #T_1a795_row5_col1, #T_1a795_row5_col2, #T_1a795_row5_col3, #T_1a795_row6_col0, #T_1a795_row6_col1, #T_1a795_row6_col2, #T_1a795_row6_col3, #T_1a795_row7_col0, #T_1a795_row7_col1, #T_1a795_row7_col2, #T_1a795_row7_col3 {\n",
+       "#T_ba617_row0_col0, #T_ba617_row0_col1, #T_ba617_row0_col2, #T_ba617_row0_col3, #T_ba617_row1_col0, #T_ba617_row1_col1, #T_ba617_row1_col2, #T_ba617_row1_col3, #T_ba617_row2_col0, #T_ba617_row2_col1, #T_ba617_row2_col2, #T_ba617_row2_col3, #T_ba617_row3_col0, #T_ba617_row3_col1, #T_ba617_row3_col2, #T_ba617_row3_col3, #T_ba617_row4_col0, #T_ba617_row4_col1, #T_ba617_row4_col2, #T_ba617_row4_col3, #T_ba617_row5_col0, #T_ba617_row5_col1, #T_ba617_row5_col2, #T_ba617_row5_col3, #T_ba617_row6_col0, #T_ba617_row6_col1, #T_ba617_row6_col2, #T_ba617_row6_col3, #T_ba617_row7_col0, #T_ba617_row7_col1, #T_ba617_row7_col2, #T_ba617_row7_col3 {\n",
        "  text-align: center;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_1a795\">\n",
+       "<table id=\"T_ba617\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_1a795_level0_col0\" class=\"col_heading level0 col0\" >Split</th>\n",
-       "      <th id=\"T_1a795_level0_col1\" class=\"col_heading level0 col1\" >Class</th>\n",
-       "      <th id=\"T_1a795_level0_col2\" class=\"col_heading level0 col2\" >Count</th>\n",
-       "      <th id=\"T_1a795_level0_col3\" class=\"col_heading level0 col3\" >Percent</th>\n",
+       "      <th id=\"T_ba617_level0_col0\" class=\"col_heading level0 col0\" >Split</th>\n",
+       "      <th id=\"T_ba617_level0_col1\" class=\"col_heading level0 col1\" >Class</th>\n",
+       "      <th id=\"T_ba617_level0_col2\" class=\"col_heading level0 col2\" >Count</th>\n",
+       "      <th id=\"T_ba617_level0_col3\" class=\"col_heading level0 col3\" >Percent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row0_col0\" class=\"data row0 col0\" >Train</td>\n",
-       "      <td id=\"T_1a795_row0_col1\" class=\"data row0 col1\" >Convertible</td>\n",
-       "      <td id=\"T_1a795_row0_col2\" class=\"data row0 col2\" >1,140</td>\n",
-       "      <td id=\"T_1a795_row0_col3\" class=\"data row0 col3\" >18.99</td>\n",
+       "      <td id=\"T_ba617_row0_col0\" class=\"data row0 col0\" >Train</td>\n",
+       "      <td id=\"T_ba617_row0_col1\" class=\"data row0 col1\" >Convertible</td>\n",
+       "      <td id=\"T_ba617_row0_col2\" class=\"data row0 col2\" >1,140</td>\n",
+       "      <td id=\"T_ba617_row0_col3\" class=\"data row0 col3\" >18.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row1_col0\" class=\"data row1 col0\" >Train</td>\n",
-       "      <td id=\"T_1a795_row1_col1\" class=\"data row1 col1\" >Pickup</td>\n",
-       "      <td id=\"T_1a795_row1_col2\" class=\"data row1 col2\" >713</td>\n",
-       "      <td id=\"T_1a795_row1_col3\" class=\"data row1 col3\" >11.88</td>\n",
+       "      <td id=\"T_ba617_row1_col0\" class=\"data row1 col0\" >Train</td>\n",
+       "      <td id=\"T_ba617_row1_col1\" class=\"data row1 col1\" >Pickup</td>\n",
+       "      <td id=\"T_ba617_row1_col2\" class=\"data row1 col2\" >713</td>\n",
+       "      <td id=\"T_ba617_row1_col3\" class=\"data row1 col3\" >11.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row2_col0\" class=\"data row2 col0\" >Train</td>\n",
-       "      <td id=\"T_1a795_row2_col1\" class=\"data row2 col1\" >SUV</td>\n",
-       "      <td id=\"T_1a795_row2_col2\" class=\"data row2 col2\" >1,616</td>\n",
-       "      <td id=\"T_1a795_row2_col3\" class=\"data row2 col3\" >26.92</td>\n",
+       "      <td id=\"T_ba617_row2_col0\" class=\"data row2 col0\" >Train</td>\n",
+       "      <td id=\"T_ba617_row2_col1\" class=\"data row2 col1\" >SUV</td>\n",
+       "      <td id=\"T_ba617_row2_col2\" class=\"data row2 col2\" >1,616</td>\n",
+       "      <td id=\"T_ba617_row2_col3\" class=\"data row2 col3\" >26.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row3_col0\" class=\"data row3 col0\" >Train</td>\n",
-       "      <td id=\"T_1a795_row3_col1\" class=\"data row3 col1\" >Sedan</td>\n",
-       "      <td id=\"T_1a795_row3_col2\" class=\"data row3 col2\" >2,534</td>\n",
-       "      <td id=\"T_1a795_row3_col3\" class=\"data row3 col3\" >42.21</td>\n",
+       "      <td id=\"T_ba617_row3_col0\" class=\"data row3 col0\" >Train</td>\n",
+       "      <td id=\"T_ba617_row3_col1\" class=\"data row3 col1\" >Sedan</td>\n",
+       "      <td id=\"T_ba617_row3_col2\" class=\"data row3 col2\" >2,534</td>\n",
+       "      <td id=\"T_ba617_row3_col3\" class=\"data row3 col3\" >42.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row4_col0\" class=\"data row4 col0\" >Test</td>\n",
-       "      <td id=\"T_1a795_row4_col1\" class=\"data row4 col1\" >Convertible</td>\n",
-       "      <td id=\"T_1a795_row4_col2\" class=\"data row4 col2\" >279</td>\n",
-       "      <td id=\"T_1a795_row4_col3\" class=\"data row4 col3\" >18.74</td>\n",
+       "      <td id=\"T_ba617_row4_col0\" class=\"data row4 col0\" >Test</td>\n",
+       "      <td id=\"T_ba617_row4_col1\" class=\"data row4 col1\" >Convertible</td>\n",
+       "      <td id=\"T_ba617_row4_col2\" class=\"data row4 col2\" >279</td>\n",
+       "      <td id=\"T_ba617_row4_col3\" class=\"data row4 col3\" >18.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row5_col0\" class=\"data row5 col0\" >Test</td>\n",
-       "      <td id=\"T_1a795_row5_col1\" class=\"data row5 col1\" >Pickup</td>\n",
-       "      <td id=\"T_1a795_row5_col2\" class=\"data row5 col2\" >189</td>\n",
-       "      <td id=\"T_1a795_row5_col3\" class=\"data row5 col3\" >12.69</td>\n",
+       "      <td id=\"T_ba617_row5_col0\" class=\"data row5 col0\" >Test</td>\n",
+       "      <td id=\"T_ba617_row5_col1\" class=\"data row5 col1\" >Pickup</td>\n",
+       "      <td id=\"T_ba617_row5_col2\" class=\"data row5 col2\" >189</td>\n",
+       "      <td id=\"T_ba617_row5_col3\" class=\"data row5 col3\" >12.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row6_col0\" class=\"data row6 col0\" >Test</td>\n",
-       "      <td id=\"T_1a795_row6_col1\" class=\"data row6 col1\" >SUV</td>\n",
-       "      <td id=\"T_1a795_row6_col2\" class=\"data row6 col2\" >441</td>\n",
-       "      <td id=\"T_1a795_row6_col3\" class=\"data row6 col3\" >29.62</td>\n",
+       "      <td id=\"T_ba617_row6_col0\" class=\"data row6 col0\" >Test</td>\n",
+       "      <td id=\"T_ba617_row6_col1\" class=\"data row6 col1\" >SUV</td>\n",
+       "      <td id=\"T_ba617_row6_col2\" class=\"data row6 col2\" >441</td>\n",
+       "      <td id=\"T_ba617_row6_col3\" class=\"data row6 col3\" >29.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_1a795_row7_col0\" class=\"data row7 col0\" >Test</td>\n",
-       "      <td id=\"T_1a795_row7_col1\" class=\"data row7 col1\" >Sedan</td>\n",
-       "      <td id=\"T_1a795_row7_col2\" class=\"data row7 col2\" >580</td>\n",
-       "      <td id=\"T_1a795_row7_col3\" class=\"data row7 col3\" >38.95</td>\n",
+       "      <td id=\"T_ba617_row7_col0\" class=\"data row7 col0\" >Test</td>\n",
+       "      <td id=\"T_ba617_row7_col1\" class=\"data row7 col1\" >Sedan</td>\n",
+       "      <td id=\"T_ba617_row7_col2\" class=\"data row7 col2\" >580</td>\n",
+       "      <td id=\"T_ba617_row7_col3\" class=\"data row7 col3\" >38.95</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x292f8f14d10>"
+       "<pandas.io.formats.style.Styler at 0x12ddcbb2210>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test_train_class_cnts = (pd.concat([train_data, test_data])\n",
+    "#                            .groupby(['Split', 'Class'])\n",
+    "#                            .size()\n",
+    "#                            .reset_index(name='Count')\n",
+    "#                            .sort_values(by=['Split', 'Class'], ascending=[False, True])\n",
+    "#                            # Add percent\n",
+    "#                            .assign(Percent = lambda x: (x['Count'] / x.groupby('Split')['Count'].transform('sum') * 100))\n",
+    "#                            .style\n",
+    "#                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "#                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "#                            .set_properties(**{'text-align': 'center'})\n",
+    "#                            .hide(axis=\"index\")\n",
+    "# )\n",
+    "\n",
+    "# dfi.export(test_train_class_cnts, '../../../Output/Class Statistics/Finalized/test_train_class_cnts.png')\n",
+    "\n",
+    "# # Output to Excel as well\n",
+    "# test_train_class_cnts.to_excel('../../../Output/Class Statistics/Finalized/test_train_class_cnts.xlsx', index=False)\n",
+    "\n",
+    "# test_train_class_cnts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Version with Class, Train, Test Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_e13a4 th {\n",
+       "  text-align: center;\n",
+       "}\n",
+       "#T_e13a4_row0_col0, #T_e13a4_row0_col1, #T_e13a4_row0_col2, #T_e13a4_row1_col0, #T_e13a4_row1_col1, #T_e13a4_row1_col2, #T_e13a4_row2_col0, #T_e13a4_row2_col1, #T_e13a4_row2_col2, #T_e13a4_row3_col0, #T_e13a4_row3_col1, #T_e13a4_row3_col2 {\n",
+       "  text-align: center;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_e13a4\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_e13a4_level0_col0\" class=\"col_heading level0 col0\" >Class</th>\n",
+       "      <th id=\"T_e13a4_level0_col1\" class=\"col_heading level0 col1\" >Train</th>\n",
+       "      <th id=\"T_e13a4_level0_col2\" class=\"col_heading level0 col2\" >Test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e13a4_row0_col0\" class=\"data row0 col0\" >Convertible</td>\n",
+       "      <td id=\"T_e13a4_row0_col1\" class=\"data row0 col1\" >1,140</td>\n",
+       "      <td id=\"T_e13a4_row0_col2\" class=\"data row0 col2\" >279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e13a4_row1_col0\" class=\"data row1 col0\" >Pickup</td>\n",
+       "      <td id=\"T_e13a4_row1_col1\" class=\"data row1 col1\" >713</td>\n",
+       "      <td id=\"T_e13a4_row1_col2\" class=\"data row1 col2\" >189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e13a4_row2_col0\" class=\"data row2 col0\" >SUV</td>\n",
+       "      <td id=\"T_e13a4_row2_col1\" class=\"data row2 col1\" >1,616</td>\n",
+       "      <td id=\"T_e13a4_row2_col2\" class=\"data row2 col2\" >441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_e13a4_row3_col0\" class=\"data row3 col0\" >Sedan</td>\n",
+       "      <td id=\"T_e13a4_row3_col1\" class=\"data row3 col1\" >2,534</td>\n",
+       "      <td id=\"T_e13a4_row3_col2\" class=\"data row3 col2\" >580</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x12de19fe390>"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_train_class_cnts = (pd.concat([train_data, test_data])\n",
-    "                           .groupby(['Split', 'Class'])\n",
-    "                           .size()\n",
-    "                           .reset_index(name='Count')\n",
-    "                           .sort_values(by=['Split', 'Class'], ascending=[False, True])\n",
-    "                           # Add percent\n",
-    "                           .assign(Percent = lambda x: (x['Count'] / x.groupby('Split')['Count'].transform('sum') * 100))\n",
-    "                           .style\n",
-    "                           .format(precision=2, thousands=\",\", decimal=\".\")\n",
-    "                           .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
-    "                           .set_properties(**{'text-align': 'center'})\n",
-    "                           .hide(axis=\"index\")\n",
-    ")\n",
+    "                            .groupby(['Class', 'Split'])\n",
+    "                            .size()\n",
+    "                            .unstack()\n",
+    "                            .fillna(0)\n",
+    "                            .astype(int)\n",
+    "                            # Flatten MultiIndex\n",
+    "                            .reset_index()\n",
+    "                            [['Class', 'Train', 'Test']]\n",
+    "                            .sort_values(by='Class')\n",
+    "                            .style\n",
+    "                            .format(precision=0, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .set_properties(**{'text-align': 'center'})\n",
+    "                            .hide(axis=\"index\")\n",
+    "    )\n",
     "\n",
     "dfi.export(test_train_class_cnts, '../../../Output/Class Statistics/Finalized/test_train_class_cnts.png')\n",
     "\n",
