--- a/Code/Evaluation/Evaluate GPT-4 Vision.ipynb
+++ b/Code/Evaluation/Evaluate GPT-4 Vision.ipynb
@@ -14,8 +14,18 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "import pandas as pd\n",
-    "from Classifier_Evaluation_Functions import *"
+    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data"
    ]
   },
   {
@@ -212,8 +222,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_classifier(y_true, y_pred, classifier_name):\n",
+    "    '''\n",
+    "    Input predicted labels and a classifier name, output a table of the accuracy, precision, recall, f1 score, and a plot of the confusion matrix.\n",
+    "    '''\n",
+    "\n",
+    "    # Make the Output Directory if it doesn't exist\n",
+    "    if not os.path.exists('../../Output/Classifier Evaluation'):\n",
+    "        os.makedirs('../../Output/Classifier Evaluation')\n",
+    "\n",
+    "    # Convert labels to integers\n",
+    "    label_mapping = {\n",
+    "        'SUV': 0,\n",
+    "        'Sedan': 1,\n",
+    "        'Pickup': 2,\n",
+    "        'Convertible': 3\n",
+    "    }\n",
+    "    y_true_num = np.array([label_mapping[label] for label in y_true])\n",
+    "    y_pred_num = np.array([label_mapping[label] for label in y_pred])\n",
+    "\n",
+    "    # Print the classification report\n",
+    "    print(f\"Classification Report for {classifier_name}:\")\n",
+    "    print(classification_report(y_true_num, y_pred_num, target_names=label_mapping.keys()))\n",
+    "\n",
+    "    # Confusion Matrix\n",
+    "    conf_matrix = confusion_matrix(y_true, y_pred)\n",
+    "    # Confusion Matrix Display\n",
+    "    cm_display = ConfusionMatrixDisplay(confusion_matrix=conf_matrix, display_labels=label_mapping.keys())\n",
+    "\n",
+    "    # Plot Confusion Matrix\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    cm_display.plot(cmap='Blues', ax=plt.gca(), xticks_rotation='vertical')\n",
+    "    plt.title('Confusion Matrix')\n",
+    "    plt.xlabel('Predicted Label')\n",
+    "    plt.ylabel('True Label')\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig('../../Output/Classifier Evaluation/' + classifier_name + '_Confusion_Matrix.png')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
