--- a/Code/Evaluation/Confusion_matrix_Master_function.ipynb
+++ b/Code/Evaluation/Confusion_matrix_Master_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f6ffd314",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ce6bce9f",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f4bf94fb",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d198e1a1",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "68d7d4f6",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1b5fe0b0",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "de075311",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "370b3d50",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bb8a6222",
    "metadata": {},
    "outputs": [
@@ -335,14 +335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b78c9249",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_All_Features_PCA.xlsx:\n",
+      " - Classification report saved as XGBoost_Classifier_Predictions_All_Features_PCA_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_All_Features_PCA_Confusion_Matrix.png\n",
+      "Processed ../../Data/Predictions/XGBoost/XGBoost_Classifier_Predictions_Individual_Features_PCA.xlsx:\n",
+      " - Classification report saved as XGBoost_Classifier_Predictions_Individual_Features_PCA_Classification_Report.xlsx\n",
+      " - Confusion matrix image saved as XGBoost_Classifier_Predictions_Individual_Features_PCA_Confusion_Matrix.png\n"
+     ]
+    }
+   ],
    "source": [
     "#run this to get the Confusion matrix and classfication report files\n",
     "\n",
-    "# analyze_classifier_performance('../../Data/Predictions/', 'XGBoost')"
+    "analyze_classifier_performance('../../Data/Predictions/', 'XGBoost')"
    ]
   }
  ],
@@ -362,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
