--- a/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Predictions_All_Data.ipynb
+++ b/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Predictions_All_Data.ipynb
@@ -184,7 +184,7 @@
       "91                   1.254761                   0.000000  \n",
       "92                   2.911038                   0.000000  \n",
       "\n",
-      "[1489 rows x 11949 columns]\n"
+      "[1489 rows x 4893 columns]\n"
      ]
     }
    ],
@@ -227,16 +227,28 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "best model\n",
-      "LogisticRegression(C=1, l1_ratio=1.0, max_iter=1000, multi_class='multinomial',\n",
-      "                   penalty='elasticnet', solver='saga')\n",
+      "LogisticRegression(C=0.1, class_weight='balanced', l1_ratio=1.0, max_iter=1000,\n",
+      "                   multi_class='ovr', penalty='elasticnet', solver='saga')\n",
       "predictions head\n",
-      "['Sedan' 'Sedan' 'SUV' 'Convertible' 'Sedan']\n",
-      "prediction time in minutes:  0.00015038649241129557\n",
-      "prediction time per image in minutes:  1.0025766160753038e-05\n"
+      "['Pickup' 'Sedan' 'Convertible' 'Convertible' 'Pickup']\n",
+      "prediction time in minutes:  0.00030594666798909506\n",
+      "prediction time per image in minutes:  2.0547123437816996e-07\n",
+      "saved prediction statistics\n",
+      "limited cols in test data\n",
+      "added to test data\n"
      ]
     }
    ],
@@ -261,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
