fix discriminability plot

--- a/Code/Dimensionality Reduction/PCA_Transformations.ipynb
+++ b/Code/Dimensionality Reduction/PCA_Transformations.ipynb
@@ -18,7 +18,8 @@
     "import pandas as pd\n",
     "from sklearn.decomposition import PCA\n",
     "import os\n",
-    "import shutil"
+    "import shutil\n",
+    "import time"
    ]
   },
   {
@@ -1419,6 +1420,8 @@
     "    # Get number of components to keep\n",
     "    n_components = num_components_to_keep[label]\n",
     "    print('number of components to keep:', n_components)\n",
+    "    # Timing PCA\n",
+    "    start_time = time.time()\n",
     "    # Get rescaled features\n",
     "    rescaled_train = feature_matrices_rescaled_train[np.argwhere(np.array(feature_matrix_labels) == label)[0][0]]\n",
     "    rescaled_test = feature_matrices_rescaled_test[np.argwhere(np.array(feature_matrix_labels) == label)[0][0]]\n",
@@ -1428,6 +1431,9 @@
     "    # Transform train and test\n",
     "    X_train_pca = fitted_pca.transform(rescaled_train)\n",
     "    X_test_pca = fitted_pca.transform(rescaled_test)\n",
+    "    # End timing\n",
+    "    end_time = time.time()\n",
+    "    print('Time elapsed:', end_time - start_time)\n",
     "    # Put in dataframe\n",
     "    pca_df_train = pd.DataFrame(X_train_pca)\n",
     "    pca_df_test = pd.DataFrame(X_test_pca)\n",
