--- a/Code/Dimensionality Reduction/tSNE_Train_Set.ipynb
+++ b/Code/Dimensionality Reduction/tSNE_Train_Set.ipynb
@@ -498,7 +498,7 @@
     "    ax.scatter(X[y==list(class_mapping.values())[k], 0], X[y==list(class_mapping.values())[k], 1], alpha=0.5, facecolors=colorst[k], label = list(class_mapping.keys())[k])\n",
     "\n",
     "  ax.set_title(title)\n",
-    "  ax.legend()"
+    "#  ax.legend()"
    ]
   },
   {
@@ -583,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
